--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jest": "^22.4.1"
+  },
+  "dependencies": {
+    "sqlite3": "^4.0.6"
   }
 }
